--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>coding</title>
   </head>
   <body>
-    <img src="images.jfif" alt="">
+    <img src="matrix-356024_1920.jpg" alt="">
     <h2>How to use</h2>
     <ol>
       <li><a href="https://mportal.cau.ac.kr/main.do" target="_blank" title="중앙대학교 포탈로 이동합니다">중앙대포탈</a></li>
