--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>CAU LIS_GRAD CHECK</title>
   </head>
+
   <body>
     <img src="" alt="">
     <h1>중앙대 문헌정보학과<br>졸업요건 체크리스트</h1>
@@ -13,6 +15,8 @@
       <li>수강학점을 정확히 입력하세요</li>
       <li>확인 후 학과사무실에 연락하세요</li>
     </ol>
+
+
     <table border="solid">
       <caption>기본 정보</caption><button>Ver.</button>
       <tr>
@@ -37,12 +41,13 @@
             <option value="">융합전공</option>
             <option value="">연계전공</option>
             <option value="">자기설계전공</option>
-            <option value="">부전공</option>
           </select>
         </td>
       </tr>
     <br>
     </table>
+
+
     <table border="solid">
       <caption>교양 영역</caption><button>세부 기준</button>
 
@@ -121,7 +126,7 @@
           <input type="checkbox" id="core1" value=""><label for="core1">도전</label>
         </td>
         <td rowspan="5">
-          <input type="number" id="core" value=""><label for="core">학점</label>
+          <input type="number" id="core" value="" placeholder="0"><label for="core">학점</label>
         </td>
       </tr>
 
@@ -156,7 +161,7 @@
         </td>
         <td></td>
         <td colspan="2">
-          <input type="number" id="choice" value=""><label for="choice">학점</label>
+          <input type="number" id="choice" value="" placeholder="0"><label for="choice">학점</label>
         </td>
       </tr>
 
@@ -186,5 +191,172 @@
     <span>02-820-6633</span>
     </a>
 
+
+    <br>
+    <table border="solid">
+      <caption>전공 영역</caption><button>세부 기준</button>
+
+      <tr>
+        <th>이수 구분</th>
+        <th>최소 학점</th>
+        <th>이수 학점</th>
+      </tr>
+
+      <tr>
+        <th>전공기초</th>
+        <td>
+          <input type="text" name="" value="12" readonly>
+        </td>
+        <td>
+          <input type="number" id="maj-basic" value="" placeholder="0"><label for="maj-basic">학점</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>전공필수</th>
+        <td>
+          <input type="text" name="" value="18" readonly>
+        </td>
+        <td>
+          <input type="number" id="maj-required" value="" placeholder="0"><label for="maj-required">학점</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>전공</th>
+        <td>
+          <input type="text" id="maj-credit" value="66" readonly>
+          <br>
+          <label for="maj-credit">(전필 포함)</label>
+        </td>
+        <td>
+          <input type="number" id="maj" value="" placeholder="0"><label for="maj">학점</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>부전공</th>
+        <td>
+          <input type="text" name="" value="21" readonly>
+        </td>
+        <td>
+          <input type="number" id="minor" value="" placeholder="0"><label for="minor">학점</label>
+          <input type="checkbox" id="min-check"><label for="min-check">해당 없음</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>자유선택</th>
+        <td>
+          <input type="text" name="" value="1" readonly>
+        </td>
+        <td>
+          <input type="number" id="freechoice" value="" placeholder="0"><label for="freechoice">학점</label>
+          <input type="checkbox" id="freechoice-check"><label for="freechoice-check">CAU세미나(1학점)</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>교직</th>
+        <td>
+          <input type="text" name="" value="22" readonly>
+        </td>
+        <td>
+          <input type="number" id="teaching" value="" placeholder="0"><label for="teaching">학점</label>
+          <input type="checkbox" id="teaching-check"><label for="teaching-check">해당 없음</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>총 이수 학점</th>
+        <td>
+          <input type="text" name="" value="132" readonly>
+        </td>
+        <td>
+          <input type="text" id="total" value="" readonly><label for="total">학점</label>
+        </td>
+      </tr>
+    </table>
+
+    <br>
+    <span>정확한 졸업사정 결과와 학과별 자체 졸업요건, 공학인증은<br>아래 학과 전화번호로 연락하여 반드시 확인하시기 바랍니다!</span>
+
+    <br>
+    <input type="reset" name="" value="reset">
+    <input type="button" name="" value="check">
+    <br>
+    <br>
+
+    <a href="tel:02-820-5144">
+    <span>문헌정보학과</span>
+    <br>
+    <span>02-820-5144</span>
+    </a>
+
+
+    <table border="solid">
+      <caption>기타 졸업요건</caption>
+
+      <tr>
+        <th colspan="2">구분</th>
+        <th>통과 여부</th>
+        <th>이수 기준</th>
+      </tr>
+
+      <tr>
+        <th rowspan="3">졸업 인정제</th>
+        <th>영어</th>
+        <td>
+          <input type="checkbox" id="eng-pass"><label for="eng-pass">통과/면제</label>
+        </td>
+        <td>전공영어강의 3개 수강 또는 영어성적 제출</td>
+      </tr>
+
+      <tr>
+        <th>한자</th>
+        <td>
+          <input type="checkbox" id="chn-pass"><label for="chn-pass">통과/면제</label>
+        </td>
+        <td>한자시험 3급 이상 또는 한자 교과목 2개 수강</td>
+      </tr>
+
+      <tr>
+        <th>한국어</th>
+        <td>
+          <input type="checkbox" id="kor-pass"><label for="kor-pass">통과/면제</label>
+        </td>
+        <td>TOPIK 4급 이상(외국인 유학생만 해당)</td>
+      </tr>
+
+      <tr>
+        <th rowspan="2">졸업시험/논문</th>
+        <th>주전공</th>
+        <td>
+          <input type="checkbox" id="firstmajor"><label for="firstmajor">합격</label>
+        </td>
+        <td>실험실습보고, 졸업작품, 실기발표 등</td>
+      </tr>
+
+      <tr>
+        <th>복수전공</th>
+        <td>
+          <input type="checkbox" id="doublemajor"><label for="doublemajor">합격/해당 없음</label>
+        </td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <th colspan="2">전 학년 평점</th>
+        <td>
+          <input type="number" id="average" value="" placeholder="0"><label for="average">/4.5</label>
+        </td>
+        <td>최종 평점 2.0 미만 졸업 불가</td>
+      </tr>
+    </table>
+
+    <br>
+    <input type="reset" name="" value="reset">
+    <input type="button" name="" value="check">
+    
   </body>
 </html>
