--- a/index.html
+++ b/index.html
@@ -1,362 +1,444 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>CAU LIS_GRAD CHECK</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>CAU LIS_GRAD CHECK</title>
+  <style>
+    body {
+      background-color: rgb(33, 85, 164);
+      color: white;
+      margin-left: 20%;
+      margin-right: 20%;
+    }
 
-  <body>
-    <img src="" alt="">
+    img {
+      width: 100px;
+      height: auto;
+    }
+
+    h1 {
+      font-size: 30px;
+    }
+
+    ol {
+      list-style: none;
+    }
+
+    a {
+      color: white;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    caption {
+      text-align: left;
+    }
+
+    th,
+    td {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    th {
+      border-color: white;
+    }
+
+    td {
+      text-align: center;
+      color: black;
+      background: white;
+    }
+
+    input[type=text] {
+      border: none;
+      text-align: center;
+    }
+
+    input[type=number] {
+      text-align: center;
+      width: 50px;
+      height: 30px;
+    }
+
+    select {
+      width: 50px;
+      height: 30px;
+    }
+
+    .header {
+      text-align: center;
+    }
+
+    .caplogo {
+      width: auto;
+      height: 20px;
+    }
+
+    .infoselect {
+      width: 80px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header">
+    <img src="logo.png" alt="">
     <h1>중앙대 문헌정보학과<br>졸업요건 체크리스트</h1>
     <h2>How to use</h2>
     <ol>
-      <li><a href="https://mportal.cau.ac.kr/main.do" target="_blank" title="중앙대학교 포탈로 이동합니다">중앙대포탈</a></li>
+      <li><a href="https://mportal.cau.ac.kr/main.do" target="_blank" title="중앙대학교 포탈로 이동합니다">중앙대포탈</a> - 강의마당 - 졸업관련 성적조회</li>
       <li>수강학점을 정확히 입력하세요</li>
       <li>확인 후 학과사무실에 연락하세요</li>
     </ol>
+  </div>
 
 
-    <table border="solid">
-      <caption>기본 정보</caption><button>Ver.</button>
-      <tr>
-        <th>입학 연도</th>
-        <th>다전공</th>
-      </tr>
-      <tr>
-        <td>
-          <select class="">
-            <option value="">--</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
-            <option value="2021">2021</option>
-          </select>
-        </td>
-        <td>
-          <select class="">
-            <option value="">--</option>
-            <option value="">전공심화</option>
-            <option value="">복수전공</option>
-            <option value="">융합전공</option>
-            <option value="">연계전공</option>
-            <option value="">자기설계전공</option>
-          </select>
-        </td>
-      </tr>
+  <table border="solid">
+    <caption><img src="logo.png" alt="" class="caplogo"> 기본 정보</caption><button>Ver.</button>
+    <tr>
+      <th width="50%">입학 연도</th>
+      <th>다전공</th>
+    </tr>
+    <tr>
+      <td>
+        <select class="infoselect">
+          <option value="">--</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+        </select>
+      </td>
+      <td>
+        <select class="infoselect">
+          <option value="">--</option>
+          <option value="">전공심화</option>
+          <option value="">복수전공</option>
+          <option value="">융합전공</option>
+          <option value="">연계전공</option>
+          <option value="">자기설계전공</option>
+        </select>
+      </td>
+    </tr>
     <br>
-    </table>
+  </table>
 
 
-    <table border="solid">
-      <caption>교양 영역</caption><button>세부 기준</button>
+  <table border="solid">
+    <caption><img src="logo.png" alt="" class="caplogo"> 교양 영역</caption><button>세부 기준</button>
 
-      <tr>
-        <th colspan="2">이수 구분</th>
-        <th>최소 학점</th>
-        <th>최대 학점</th>
-        <th colspan="2">이수 학점</th>
-      </tr>
+    <tr>
+      <th colspan="2">이수 구분</th>
+      <th>최소 학점</th>
+      <th>최대 학점</th>
+      <th colspan="2">이수 학점</th>
+    </tr>
 
-      <tr>
-        <th rowspan="3">공통교양</th>
-        <th>국어</th>
-        <td>
-          <input type="text" name="" value="2" readonly>
-        </td>
-        <td>
-          <input type="text" name="" value="2" readonly>
-        </td>
-        <td colspan="2">
-          <select class="" id="kor-credit">
-            <option value="0">0</option>
-            <option value="2">2</option>
-          </select>
-          <label for="kor-credit"></label>
-        </td>
-      </tr>
+    <tr>
+      <th rowspan="3">공통교양</th>
+      <th>국어</th>
+      <td>
+        <input type="text" name="" value="2" readonly>
+      </td>
+      <td>
+        <input type="text" name="" value="2" readonly>
+      </td>
+      <td colspan="2">
+        <select class="" id="kor-credit">
+          <option value="0">0</option>
+          <option value="2">2</option>
+        </select>
+        <label for="kor-credit"></label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>영어</th>
-        <td>
-          <input type="text" name="" value="2" readonly>
-        </td>
-        <td>
-          <input type="text" name="" value="2" readonly>
-        </td>
-        <td colspan="2">
-          <select class="" id="eng-credit">
-            <option value="0">0</option>
-            <option value="2">2</option>
-          </select>
-          <label for="eng-credit"></label>
-          <input type="checkbox" id="eng-check"><label for="eng-check">면제</label>
-        </td>
-      </tr>
+    <tr>
+      <th>영어</th>
+      <td>
+        <input type="text" name="" value="2" readonly>
+      </td>
+      <td>
+        <input type="text" name="" value="2" readonly>
+      </td>
+      <td colspan="2">
+        <select class="" id="eng-credit">
+          <option value="0">0</option>
+          <option value="2">2</option>
+        </select>
+        <label for="eng-credit"></label>
+        <br><input type="checkbox" id="eng-check"><label for="eng-check">면제</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>기타</th>
-        <td>
-          <input type="text" name="" value="10" readonly>
-        </td>
-        <td>
-          <input type="text" name="" value="10" readonly>
-        </td>
-        <td colspan="2">
-          <select class="" id="other-credit">
-            <option value="0">0</option>
-            <option value="2">2</option>
-            <option value="4">4</option>
-            <option value="6">6</option>
-            <option value="8">8</option>
-            <option value="10">10</option>
-          </select>
-          <label for="other-credit"></label>
-          <input type="checkbox" id="other-check"><label for="other-check">회계학원론 이수</label>
-        </td>
-      </tr>
+    <tr>
+      <th>기타</th>
+      <td>
+        <input type="text" name="" value="10" readonly>
+      </td>
+      <td>
+        <input type="text" name="" value="10" readonly>
+      </td>
+      <td colspan="2">
+        <select class="" id="other-credit">
+          <option value="0">0</option>
+          <option value="2">2</option>
+          <option value="4">4</option>
+          <option value="6">6</option>
+          <option value="8">8</option>
+          <option value="10">10</option>
+        </select>
+        <label for="other-credit"></label>
+        <br><input type="checkbox" id="other-check"><label for="other-check">회계학원론 이수</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th colspan="2" rowspan="5">핵심교양</th>
-        <td rowspan="5">
-          <input type="text" name="" value="14" readonly>
-        </td>
-        <td rowspan="5"></td>
-        <td>
-          <input type="checkbox" id="core1" value=""><label for="core1">도전</label>
-        </td>
-        <td rowspan="5">
-          <input type="number" id="core" value="" placeholder="0"><label for="core">학점</label>
-        </td>
-      </tr>
+    <tr>
+      <th colspan="2" rowspan="5">핵심교양</th>
+      <td rowspan="5">
+        <input type="text" name="" value="14" readonly>
+      </td>
+      <td rowspan="5"></td>
+      <td>
+        <input type="checkbox" id="core1" value=""><label for="core1">도전</label>
+      </td>
+      <td rowspan="5">
+        <input type="number" id="core" value="" placeholder="0" min="0"><label for="core">학점</label>
+      </td>
+    </tr>
 
-      <tr>
-        <td>
-          <input type="checkbox" id="core2" value=""><label for="core2">창의</label>
-        </td>
-      </tr>
+    <tr>
+      <td>
+        <input type="checkbox" id="core2" value=""><label for="core2">창의</label>
+      </td>
+    </tr>
 
-      <tr>
-        <td>
-          <input type="checkbox" id="core3" value=""><label for="core3">융합</label>
-        </td>
-      </tr>
+    <tr>
+      <td>
+        <input type="checkbox" id="core3" value=""><label for="core3">융합</label>
+      </td>
+    </tr>
 
-      <tr>
-        <td>
-          <input type="checkbox" id="core4" value=""><label for="core4">신뢰</label>
-        </td>
-      </tr>
+    <tr>
+      <td>
+        <input type="checkbox" id="core4" value=""><label for="core4">신뢰</label>
+      </td>
+    </tr>
 
-      <tr>
-        <td>
-          <input type="checkbox" id="core5" value=""><label for="core5">소통</label>
-        </td>
-      </tr>
+    <tr>
+      <td>
+        <input type="checkbox" id="core5" value=""><label for="core5">소통</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th colspan="2">선택교양</th>
-        <td>
-          <input type="text" name="" value="0" readonly>
-        </td>
-        <td></td>
-        <td colspan="2">
-          <input type="number" id="choice" value="" placeholder="0"><label for="choice">학점</label>
-        </td>
-      </tr>
+    <tr>
+      <th colspan="2">선택교양</th>
+      <td>
+        <input type="text" name="" value="0" readonly>
+      </td>
+      <td></td>
+      <td colspan="2">
+        <input type="number" id="choice" value="" placeholder="0" min="0"><label for="choice">학점</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th colspan="2">합계</th>
-        <td>
-          <input type="text" name="" value="28" readonly>
-        </td>
-        <td>
-          <input type="text" name="" value="45" readonly>
-        </td>
-        <td colspan="2">
-          <input type="text" id="sum" value="" readonly><label for="sum">학점</label>
-        </td>
-      </tr>
-    </table>
+    <tr>
+      <th colspan="2">합계</th>
+      <td>
+        <input type="text" name="" value="28" readonly>
+      </td>
+      <td>
+        <input type="text" name="" value="45" readonly>
+      </td>
+      <td colspan="2">
+        <input type="text" id="sum" value="" readonly><label for="sum">학점</label>
+      </td>
+    </tr>
+  </table>
 
-    <br>
-    <input type="reset" name="" value="reset">
-    <input type="button" name="" value="check">
-    <br>
-    <br>
+  <br>
+  <input type="reset" name="" value="reset">
+  <input type="button" name="" value="check">
+  <br>
+  <br>
 
-    <a href="tel:02-820-6633">
+  <a href="tel:02-820-6633">
     <span>다빈치교양대학</span>
     <br>
     <span>02-820-6633</span>
-    </a>
+  </a>
 
 
-    <br>
-    <table border="solid">
-      <caption>전공 영역</caption><button>세부 기준</button>
+  <br>
+  <table border="solid">
+    <caption><img src="logo.png" alt="" class="caplogo"> 전공 영역</caption><button>세부 기준</button>
 
-      <tr>
-        <th>이수 구분</th>
-        <th>최소 학점</th>
-        <th>이수 학점</th>
-      </tr>
+    <tr>
+      <th>이수 구분</th>
+      <th>최소 학점</th>
+      <th>이수 학점</th>
+    </tr>
 
-      <tr>
-        <th>전공기초</th>
-        <td>
-          <input type="text" name="" value="12" readonly>
-        </td>
-        <td>
-          <input type="number" id="maj-basic" value="" placeholder="0"><label for="maj-basic">학점</label>
-        </td>
-      </tr>
+    <tr>
+      <th>전공기초</th>
+      <td>
+        <input type="text" name="" value="12" readonly>
+      </td>
+      <td>
+        <input type="number" id="maj-basic" value="" placeholder="0" min="0"><label for="maj-basic">학점</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>전공필수</th>
-        <td>
-          <input type="text" name="" value="18" readonly>
-        </td>
-        <td>
-          <input type="number" id="maj-required" value="" placeholder="0"><label for="maj-required">학점</label>
-        </td>
-      </tr>
+    <tr>
+      <th>전공필수</th>
+      <td>
+        <input type="text" name="" value="18" readonly>
+      </td>
+      <td>
+        <input type="number" id="maj-required" value="" placeholder="0" min="0"><label for="maj-required">학점</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>전공</th>
-        <td>
-          <input type="text" id="maj-credit" value="66" readonly>
-          <br>
-          <label for="maj-credit">(전필 포함)</label>
-        </td>
-        <td>
-          <input type="number" id="maj" value="" placeholder="0"><label for="maj">학점</label>
-        </td>
-      </tr>
+    <tr>
+      <th>전공</th>
+      <td>
+        <input type="text" id="maj-credit" value="66" readonly>
+        <br>
+        <label for="maj-credit">(전필 포함)</label>
+      </td>
+      <td>
+        <input type="number" id="maj" value="" placeholder="0" min="0"><label for="maj">학점</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>부전공</th>
-        <td>
-          <input type="text" name="" value="21" readonly>
-        </td>
-        <td>
-          <input type="number" id="minor" value="" placeholder="0"><label for="minor">학점</label>
-          <input type="checkbox" id="min-check"><label for="min-check">해당 없음</label>
-        </td>
-      </tr>
+    <tr>
+      <th>부전공</th>
+      <td>
+        <input type="text" name="" value="21" readonly>
+      </td>
+      <td>
+        <input type="number" id="minor" value="" placeholder="0" min="0"><label for="minor">학점</label>
+        <br><input type="checkbox" id="min-check"><label for="min-check">해당 없음</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>자유선택</th>
-        <td>
-          <input type="text" name="" value="1" readonly>
-        </td>
-        <td>
-          <input type="number" id="freechoice" value="" placeholder="0"><label for="freechoice">학점</label>
-          <input type="checkbox" id="freechoice-check"><label for="freechoice-check">CAU세미나(1학점)</label>
-        </td>
-      </tr>
+    <tr>
+      <th>자유선택</th>
+      <td>
+        <input type="text" name="" value="1" readonly>
+      </td>
+      <td>
+        <input type="number" id="freechoice" value="" placeholder="0" min="0"><label for="freechoice">학점</label>
+        <br><input type="checkbox" id="freechoice-check"><label for="freechoice-check">CAU세미나(1학점)</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>교직</th>
-        <td>
-          <input type="text" name="" value="22" readonly>
-        </td>
-        <td>
-          <input type="number" id="teaching" value="" placeholder="0"><label for="teaching">학점</label>
-          <input type="checkbox" id="teaching-check"><label for="teaching-check">해당 없음</label>
-        </td>
-      </tr>
+    <tr>
+      <th>교직</th>
+      <td>
+        <input type="text" name="" value="22" readonly>
+      </td>
+      <td>
+        <input type="number" id="teaching" value="" placeholder="0" min="0"><label for="teaching">학점</label>
+        <br><input type="checkbox" id="teaching-check"><label for="teaching-check">해당 없음</label>
+      </td>
+    </tr>
 
-      <tr>
-        <th>총 이수 학점</th>
-        <td>
-          <input type="text" name="" value="132" readonly>
-        </td>
-        <td>
-          <input type="text" id="total" value="" readonly><label for="total">학점</label>
-        </td>
-      </tr>
-    </table>
+    <tr>
+      <th>총 학점</th>
+      <td>
+        <input type="text" name="" value="132" readonly>
+      </td>
+      <td>
+        <input type="text" id="total" value="" readonly><label for="total">학점</label>
+      </td>
+    </tr>
+  </table>
 
-    <br>
-    <span>정확한 졸업사정 결과와 학과별 자체 졸업요건, 공학인증은<br>아래 학과 전화번호로 연락하여 반드시 확인하시기 바랍니다!</span>
+  <br>
+  <span>정확한 졸업사정 결과와 학과별 자체 졸업요건, 공학인증은<br>아래 학과 전화번호로 연락하여 반드시 확인하시기 바랍니다!</span>
 
-    <br>
-    <input type="reset" name="" value="reset">
-    <input type="button" name="" value="check">
-    <br>
-    <br>
+  <br>
+  <input type="reset" name="" value="reset">
+  <input type="button" name="" value="check">
+  <br>
+  <br>
 
-    <a href="tel:02-820-5144">
+  <a href="tel:02-820-5144">
     <span>문헌정보학과</span>
     <br>
     <span>02-820-5144</span>
-    </a>
+  </a>
 
 
-    <table border="solid">
-      <caption>기타 졸업요건</caption>
+  <table border="solid">
+    <caption><img src="logo.png" alt="" class="caplogo"> 기타 졸업요건</caption>
 
-      <tr>
-        <th colspan="2">구분</th>
-        <th>통과 여부</th>
-        <th>이수 기준</th>
-      </tr>
+    <tr>
+      <th colspan="2">구분</th>
+      <th>통과 여부</th>
+      <th>이수 기준</th>
+    </tr>
 
-      <tr>
-        <th rowspan="3">졸업 인정제</th>
-        <th>영어</th>
-        <td>
-          <input type="checkbox" id="eng-pass"><label for="eng-pass">통과/면제</label>
-        </td>
-        <td>전공영어강의 3개 수강 또는 영어성적 제출</td>
-      </tr>
+    <tr>
+      <th rowspan="3">졸업 인정제</th>
+      <th>영어</th>
+      <td>
+        <input type="checkbox" id="eng-pass"><label for="eng-pass">통과/면제</label>
+      </td>
+      <td>전공영어강의 3개 수강 또는 영어성적 제출</td>
+    </tr>
 
-      <tr>
-        <th>한자</th>
-        <td>
-          <input type="checkbox" id="chn-pass"><label for="chn-pass">통과/면제</label>
-        </td>
-        <td>한자시험 3급 이상 또는 한자 교과목 2개 수강</td>
-      </tr>
+    <tr>
+      <th>한자</th>
+      <td>
+        <input type="checkbox" id="chn-pass"><label for="chn-pass">통과/면제</label>
+      </td>
+      <td>한자시험 3급 이상 또는 한자 교과목 2개 수강</td>
+    </tr>
 
-      <tr>
-        <th>한국어</th>
-        <td>
-          <input type="checkbox" id="kor-pass"><label for="kor-pass">통과/면제</label>
-        </td>
-        <td>TOPIK 4급 이상(외국인 유학생만 해당)</td>
-      </tr>
+    <tr>
+      <th>한국어</th>
+      <td>
+        <input type="checkbox" id="kor-pass"><label for="kor-pass">통과/면제</label>
+      </td>
+      <td>TOPIK 4급 이상(외국인 유학생만 해당)</td>
+    </tr>
 
-      <tr>
-        <th rowspan="2">졸업시험/논문</th>
-        <th>주전공</th>
-        <td>
-          <input type="checkbox" id="firstmajor"><label for="firstmajor">합격</label>
-        </td>
-        <td>실험실습보고, 졸업작품, 실기발표 등</td>
-      </tr>
+    <tr>
+      <th rowspan="2">졸업시험/논문</th>
+      <th>주전공</th>
+      <td>
+        <input type="checkbox" id="firstmajor"><label for="firstmajor">합격</label>
+      </td>
+      <td>실험실습보고, 졸업작품, 실기발표 등</td>
+    </tr>
 
-      <tr>
-        <th>복수전공</th>
-        <td>
-          <input type="checkbox" id="doublemajor"><label for="doublemajor">합격/해당 없음</label>
-        </td>
-        <td></td>
-      </tr>
+    <tr>
+      <th>복수전공</th>
+      <td>
+        <input type="checkbox" id="doublemajor"><label for="doublemajor">합격/해당 없음</label>
+      </td>
+      <td></td>
+    </tr>
 
-      <tr>
-        <th colspan="2">전 학년 평점</th>
-        <td>
-          <input type="number" id="average" value="" placeholder="0"><label for="average">/4.5</label>
-        </td>
-        <td>최종 평점 2.0 미만 졸업 불가</td>
-      </tr>
-    </table>
+    <tr>
+      <th colspan="2">전 학년 평점</th>
+      <td>
+        <input type="number" id="average" value="" placeholder="0.00" min="0" step=".01"><label for="average">/4.5</label>
+      </td>
+      <td>최종 평점 2.0 미만 졸업 불가</td>
+    </tr>
+  </table>
 
-    <br>
-    <input type="reset" name="" value="reset">
-    <input type="button" name="" value="check">
-    
-  </body>
+  <br>
+  <input type="reset" name="" value="reset">
+  <input type="button" name="" value="check">
+
+</body>
+
 </html>
